[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
cargo-manifest = "0.17.0"
leaky-bucket = "1.1.2"
rand = "0.8.5"
serde = "1.0.215"
serde_json = "1.0.133"
serde_with = "3.11.0"
serde_yml = "0.0.12"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = { version = "1.28.2", features = ["time"] }
toml = "0.8.19"

[dev-dependencies]
http-body-util = "0.1"
bytes = "1.5"
