[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["cookie", "query"] }
cargo-manifest = "0.17.0"
chrono = "0.4.39"
jsonwebtoken = "9.3.0"
leaky-bucket = "1.1.2"
rand = "0.8.5"
serde = "1.0.215"
serde_json = "1.0.133"
serde_with = "3.11.0"
serde_yml = "0.0.12"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["sqlx", "postgres"] }
sqlx = { version = "0.8.2", features = ["chrono", "uuid"] }
tokio = { version = "1.28.2", features = ["time"] }
tower-http = { version = "0.6.2", features = ["fs"] }
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1"
bytes = "1.5"
mockall = "0.13.1"
tower = { version = "0.5.2", features = ["util"] }
